--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,29 +4,39 @@
 	<title>Register/Login Form</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/login.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="main">
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-				<form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Sign up</button>
-				</form>
+                <form name="register">
+                    <label for="chk" aria-hidden="true">Sign up</label>
+					<input type="text" class="name" name="name" placeholder="User name">
+					<input type="email" class="email" name="email" placeholder="Email">
+					<input type="password" class="password" name="password" placeholder="Password">
+					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password">
+					<!-- <input type="text" class="name" name="name" placeholder="User name" required="">
+					<input type="email" class="email" name="email" placeholder="Email" required="">
+					<input type="password" class="password" name="password" placeholder="Password" required="">
+					<input type="password" class="cpassword" name="cpassword" placeholder="Confirm Password" required=""> -->
+					<input type="submit" class="button" value="Sign up"></input>
+                    <p align="center" id="error" style="color: rgb(255, 255, 0);"></p>
+                </form>
 			</div>
-
+            
 			<div class="login">
-				<form>
-					<label for="chk" aria-hidden="true">Login</label>
+                <form>
+                    <label for="chk" aria-hidden="true">Login</label>
 					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Login</button>
+					<input type="password" name="password" placeholder="Password" required="">
+					<!-- <button>Login</button> -->
+                    <input type="submit" class="button" value="Login"></input>
+                    <p align="center" id="error1" style="color: rgb(255, 255, 0);"></p>
 				</form>
 			</div>
 	</div>
 </body>
+<script src="assets/js/login.js"></script>
 </html>
