--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -3,13 +3,14 @@
   <head>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/cookies.js"></script>
-    <script src="assets/js/checkuser.js"></script>
+    <!-- <script src="assets/js/checkuser.js"></script> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+      href="assets/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
