--- a/src/main/webapp/admin_projects.html
+++ b/src/main/webapp/admin_projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="assets/js/jquery/jquery.min.js"></script>
-    <script src="assets/js/checkuser.js"></script>
+    <!-- <script src="assets/js/checkuser.js"></script> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,12 +13,14 @@
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link rel="icon" type="image/png" href="assets/icons/icon.png" sizes="96x96">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
 </head>
@@ -46,7 +48,7 @@
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
-                    <a href="#" class="nav_link">
+                    <a href="admin" class="nav_link">
                         <i class='bx bx-user nav_icon'></i>
                         <span class="nav_name">Users</span> </a>
                     <a href="admin_projects" class="nav_link active">
@@ -58,35 +60,41 @@
                         <span class="nav_name">Tasks</span>
                     </a>
                 </div>
-            </div> <a href="#" onclick="logout()" class="nav_link"> <i class='bx bx-log-out nav_icon'></i> <span
-                    class="nav_name">SignOut</span> </a>
+            </div>
+            <a href="#" onclick="logout()" class="nav_link">
+                <i class='bx bx-log-out nav_icon'></i>
+                <span class="nav_name">SignOut</span>
+            </a>
         </nav>
     </div>
-    <div class="container mt-1" id="projects">
-        <div class="float-left">
-            <h3>Projects</h3>
-        </div>
-        <div class="float-right">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
+
+    <div class="container mt-2">
+        <h3>Projects</h3>
+    </div>
+    <div class="clearfix"></div>
+    <br />
+    <div class="row">
+        <div class="mt-0 mb-3">
+            <button class="btn btn-primary" id="createBtn" data-toggle="modal" data-target="#formModal">
                 <i class="fa fa-add"></i> Create Project
             </button>
         </div>
-        <br /><br /><br />
-        <table id="projectsTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>pid</th>
-                    <th>SNo</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Owner</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-
-            <tbody>
-            </tbody>
-        </table>
+        <div class="col-md-12">
+            <table id="projectsTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>pid</th>
+                        <th>SNo</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Owner</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- Create Project Modal -->
@@ -96,23 +104,21 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Create Project</h5>
-                    <button type="button" id="createProjectBtn" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form name="create-project" id="create-project">
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="name">Name</label>
                             <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp"
                                 placeholder="Enter Project Name" required />
                         </div>
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="desc">Description</label>
                             <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="7"
                                 placeholder="Enter Description atleast 20 characters" required></textarea>
                         </div>
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="ownerList">Owner Name</label>
                             <select class="form-control" id="ownerList" name="ownerList"
                                 aria-label=".form-select-lg example">
@@ -137,23 +143,21 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formEditModalLabel">Update Project</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form name="edit-project" id="edit-project">
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="ename">Name</label>
                             <input type="text" class="form-control" id="ename" name="ename" aria-describedby="nameHelp"
                                 placeholder="Enter Project Name" required />
                         </div>
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="edesc">Description</label>
                             <textarea class="form-control" id="edesc" name="edesc" aria-describedby="edescHelp" rows="7"
                                 placeholder="Enter Description atleast 20 characters" required></textarea>
                         </div>
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="eownerList">Owner Name</label>
                             <select class="form-control" id="eownerList" name="eownerList"
                                 aria-label=".form-select-lg example">
@@ -178,9 +182,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formShowModalLabel">Project Details</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="projectDetails">
                 </div>
@@ -200,13 +202,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formAddModalLabel">Add members</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" style="height:420px">
                     <form name="add-members" id="add-members">
-                        <div class="form-group">
+                        <div class="mb-3">
                             <label for="members" id="pTitle"></label><br>
                             <label for="members" id="members">Select Members</label>
                             <ul class="list-group list-group-flush" id="listMembers">
