--- a/src/main/webapp/admin_tasks.html
+++ b/src/main/webapp/admin_tasks.html
@@ -48,7 +48,7 @@
             <i class='bx bx-grid-alt nav_icon'></i>
             <span class="nav_name">Dashboard</span>
           </a>
-          <a href="#" class="nav_link">
+          <a href="admin" class="nav_link">
             <i class='bx bx-user nav_icon'></i>
             <span class="nav_name">Users</span> </a>
           <a href="admin_projects" class="nav_link">
@@ -86,8 +86,9 @@
           <th>t_id</th>
           <th></th>
           <th>Task Title</th>
-          <th>Priority</th>
           <th>Creator</th>
+          <th>Assigned</th>
+          <th>Priority</th>
           <th>Start Date</th>
         </thead>
 
@@ -95,46 +96,51 @@
         </tbody>
       </table>
     </div>
-    <div class="col-md-6 mt-0" hidden id="rowEditForm" style="border: 1px solid #dee2e6">
-      <p style="font-weight: bold; font-size:20px">Edit task </p>
+    <div class="col-md-6" hidden id="rowEditForm" style="border: 1px solid #dee2e6">
+      <p class="mt-1" style="font-weight: bold; font-size:20px">Edit task </p>
       <form>
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <input type="text" class="form-control" id="etitle" placeholder="name@example.com">
           <label for="floatingInput">Title</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="1" id="completed" checked>
-          <label class="form-check-label" for="completed">
+          <input class="form-check-input" type="checkbox" value="1" id="ecompleted" checked>
+          <label class="form-check-label" for="ecompleted">
             Mark as complete
           </label>
         </div>
 
-        <div class="col-md mt-3">
-          <div class="form-floating">
-            <select class="form-select" id="assignee-edit" aria-label="Select assignee">
-              <option selected>Open this select menu</option>
-              <!-- <option value="1">One</option> -->
-            </select>
-            <label for="floatingSelectGrid">Assigned Name</label>
+        <div class="row">
+          <div class="col-md-6 mt-3">
+            <div class="form-floating">
+              <select class="form-select" id="eassignee" aria-label="Select assignee">
+
+              </select>
+              <label for="floatingSelectGrid">Assigned Name</label>
+            </div>
+          </div>
+          <div class="col-md-6 mt-3">
+            <div class="form-floating">
+              <select class="form-select" id="epriority" aria-label="Select priority">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+                <option value="urgent">Urgent</option>
+              </select>
+              <label for="epriority">Priority</label>
+            </div>
           </div>
         </div>
 
         <div class="row">
-
           <div class="col-md-6 mt-3">
-            <div class="form-floating">
-              <select class="form-select" id="assignee-edit" aria-label="Select assignee">
-                <option value="low">Low</option>
-                <option value="medium" selected>Medium</option>
-                <option value="high">High</option>
-                <option value="urgent">Urgent</option>
-              </select>
-              <label for="floatingSelectGrid">Priority</label>
+            <div class="form-floating input-group date">
+              <input class="form-control" type="date" id="estartDate">
+              <label for="estartDate">Start date</label>
             </div>
           </div>
-
           <div class="col-md-6 mt-3">
-            <div class="form-floating input-group date" >
+            <div class="form-floating input-group date">
               <input class="form-control" type="date" id="dueDate">
               <label for="dueDate">Due date</label>
             </div>
@@ -143,22 +149,13 @@
         </div>
 
         <div class="form-floating mt-3 mb-3">
-          <textarea class="form-control" placeholder="Description of task" id="description"
+          <textarea class="form-control" placeholder="Description of task" id="edescription"
             style="height: 100px"></textarea>
           <label for="description">Description</label>
         </div>
 
-        <div class="form-group mb-3">
-          <div class="form-floating">
-            <select class="form-select" id="assignee-edit" aria-label="Select assignee">
-
-            </select>
-            <label for="floatingSelectGrid">Project</label>
-          </div>
-        </div>
-
         <div class="mt-3 mb-3">
-          <button type="button" class="btn btn-success">Save</button>
+          <button type="button" id="eBtn" class="btn btn-success">Save</button>
           <button type="button" class="btn btn-danger">Delete</button>
           <button type="button" onclick="resetTableEdit()" class="btn btn-primary">Close</button>
         </div>
@@ -175,35 +172,33 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="formModalLabel">Create Task</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+          <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
         </div>
-        <form name="add-task" id="add-taks">
+        <form name="add-task" id="add-task">
           <div class="modal-body">
-            <div class="form-group">
+            <div class="mb-3">
               <label for="title">Title</label>
               <input type="text" class="form-control" id="title" name="title" aria-describedby="titleHelp"
                 placeholder="Enter Task Title" required />
             </div>
-            <div class="form-group">
-              <label for="desc">Description</label>
-              <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="5"
-                placeholder="Enter Description atleast 10 characters" required></textarea>
+            <div class="form-floating mb-3">
+              <textarea class="form-control" placeholder="Description of task" id="description"
+                style="height: 100px"></textarea>
+              <label for="description">Description</label>
             </div>
             <div class="row" style="justify-content:space-around; display:flex">
-              <div class="form-group col-md-6">
+              <div class="mb-3 col-md-6">
                 <label for="startDate">Start</label>
                 <input id="startDate" class="form-control" min="2022-06-10" max="2024-12-31" type="date" required />
               </div>
-              <div class="form-group col-md-6">
+              <div class="mb-3 col-md-6">
                 <label for="endDate">End</label>
                 <input id="endDate" class="form-control" min="2022-06-10" max="2024-12-31" type="date" required />
               </div>
             </div>
 
             <div class="row" style="justify-content:space-around; display:flex">
-              <div class="form-group col-md-6">
+              <div class="mb-3 col-md-6">
                 <label for="priority">Assigned Name</label>
                 <br />
                 <select class="form-control form-two" id="assignee" name="assignee"
@@ -211,7 +206,7 @@
                   <!-- Filled by JS -->
                 </select>
               </div>
-              <div class="form-group col-md-6">
+              <div class="mb-3 col-md-6">
                 <label for="priority">Priority</label>
                 <br />
                 <select class="form-control form-two" id="priority" name="priority"
@@ -223,7 +218,7 @@
                 </select>
               </div>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
               <label for="project">Project</label>
               <br />
               <select class="form-control" id="project" name="project" aria-label=".form-select-lg example">
@@ -245,6 +240,7 @@
 
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/js/api_utility.js"></script>
   <script src="assets/js/tasks.js"></script>
   <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
