Tasks CRUD done with dynamic data fill

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="assets/js/jquery/jquery.min.js"></script>
-    <!-- <script src="assets/js/checkuser.js"></script>  -->
+    <script src="assets/js/checkuser.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -122,10 +122,6 @@
                             <div id="passwordHelp" hidden class="form-text">
                                 Your password must contain letters, numbers, special characters.
                             </div>
-                            <!-- <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" name="password"
-                                placeholder="Password" required />
-                            <div id="passwordHelp" hidden class="form-text">* Password should contains small, captial and special characters</div> -->
                         </div>
                         <div class="mb-3">
                             <label for="role">Role</label>
@@ -201,7 +197,7 @@
                     </div>
                     <h4 class="modal-title w-100">Are you sure?</h4>
                 </div>
-                <form id="delete-user" name="delete-user">
+                <form id="delete-task" name="delete-task">
 
                     <div class="modal-body">
                         <p>Do you really want to delete these records? This process cannot be undone.</p>
