--- a/src/main/webapp/admin_tasks.html
+++ b/src/main/webapp/admin_tasks.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src="assets/js/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/js/checkuser.js"></script> -->
+  <script src="assets/js/checkuser.js"></script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,8 +17,6 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
@@ -61,7 +59,7 @@
           </a>
         </div>
       </div>
-      <a href="#" onclick="logout()" class="nav_link">
+      <a href="#" onclick="return logout()" class="nav_link">
         <i class='bx bx-log-out nav_icon'></i>
         <span class="nav_name">SignOut</span>
       </a>
@@ -79,13 +77,14 @@
         <i class="fa fa-add"></i> Create Task
       </button>
     </div>
-    <div class="col-md-12" id="tableSize">
+    <div class="col-md-12 animated" id="tableSize">
       <table id="tasksTable" class="table table-bordered" style="border: right 0 !important;" cellspacing="0"
         width="100%">
         <thead>
           <th>t_id</th>
           <th></th>
           <th>Task Title</th>
+          <th>Project</th>
           <th>Creator</th>
           <th>Assigned</th>
           <th>Priority</th>
@@ -94,16 +93,17 @@
 
         <tbody>
         </tbody>
+
       </table>
     </div>
-    <div class="col-md-6" hidden id="rowEditForm" style="border: 1px solid #dee2e6">
+    <div class="col-md-6 animated" hidden id="rowEditForm" style="border: 1px solid #dee2e6">
       <p class="mt-1" style="font-weight: bold; font-size:20px">Edit task </p>
       <form>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="etitle" placeholder="name@example.com">
           <label for="floatingInput">Title</label>
         </div>
-        <div class="form-check">
+        <div class="form-check mb-3">
           <input class="form-check-input" type="checkbox" value="1" id="ecompleted" checked>
           <label class="form-check-label" for="ecompleted">
             Mark as complete
@@ -111,7 +111,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mb-3">
             <div class="form-floating">
               <select class="form-select" id="eassignee" aria-label="Select assignee">
 
@@ -119,7 +119,7 @@
               <label for="floatingSelectGrid">Assigned Name</label>
             </div>
           </div>
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mb-3">
             <div class="form-floating">
               <select class="form-select" id="epriority" aria-label="Select priority">
                 <option value="low">Low</option>
@@ -133,13 +133,13 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mb-3">
             <div class="form-floating input-group date">
               <input class="form-control" type="date" id="estartDate">
               <label for="estartDate">Start date</label>
             </div>
           </div>
-          <div class="col-md-6 mt-3">
+          <div class="col-md-6 mb-3">
             <div class="form-floating input-group date">
               <input class="form-control" type="date" id="dueDate">
               <label for="dueDate">Due date</label>
@@ -148,15 +148,22 @@
 
         </div>
 
-        <div class="form-floating mt-3 mb-3">
+        <div class="form-floating mb-3">
           <textarea class="form-control" placeholder="Description of task" id="edescription"
             style="height: 100px"></textarea>
           <label for="description">Description</label>
         </div>
 
+        <!-- <div class="form-floating mb-3">
+          <div class="mb-3">
+            <label for="eproject" class="form-label">Project</label>
+            <input type="text" id="eproject" class="form-control" placeholder="">
+          </div>
+        </div> -->
+
         <div class="mt-3 mb-3">
           <button type="button" id="eBtn" class="btn btn-success">Save</button>
-          <button type="button" class="btn btn-danger">Delete</button>
+          <button type="button" id="deleteBtn" class="btn btn-danger">Delete</button>
           <button type="button" onclick="resetTableEdit()" class="btn btn-primary">Close</button>
         </div>
     </div>
@@ -176,10 +183,9 @@
         </div>
         <form name="add-task" id="add-task">
           <div class="modal-body">
-            <div class="mb-3">
+            <div class="form-floating mb-3">
+              <input type="text" class="form-control" id="title" placeholder="Enter task title">
               <label for="title">Title</label>
-              <input type="text" class="form-control" id="title" name="title" aria-describedby="titleHelp"
-                placeholder="Enter Task Title" required />
             </div>
             <div class="form-floating mb-3">
               <textarea class="form-control" placeholder="Description of task" id="description"
@@ -196,10 +202,16 @@
                 <input id="endDate" class="form-control" min="2022-06-10" max="2024-12-31" type="date" required />
               </div>
             </div>
-
+            <div class="mb-3">
+              <label for="project">Project</label>
+              <br />
+              <select class="form-control" id="project" name="project" aria-label=".form-select-lg example">
+                <!-- Filled by JS -->
+              </select>
+            </div>
             <div class="row" style="justify-content:space-around; display:flex">
               <div class="mb-3 col-md-6">
-                <label for="priority">Assigned Name</label>
+                <label for="priority">Assignee</label>
                 <br />
                 <select class="form-control form-two" id="assignee" name="assignee"
                   aria-label=".form-select-lg example">
@@ -218,13 +230,7 @@
                 </select>
               </div>
             </div>
-            <div class="mb-3">
-              <label for="project">Project</label>
-              <br />
-              <select class="form-control" id="project" name="project" aria-label=".form-select-lg example">
-                <!-- Filled by JS -->
-              </select>
-            </div>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">
@@ -237,12 +243,36 @@
     </div>
   </div>
   <!-- Modal end -->
+  <!-- Confirm Modal -->
+  <div id="deleteModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header flex-column">
+          <div class="icon-box">
+            <i class="fas fa-times-circle"></i>
+          </div>
+          <h4 class="modal-title w-100">Are you sure?</h4>
+        </div>
+        <form id="delete-task" name="delete-task">
 
+          <div class="modal-body">
+            <p>Do you really want to delete these records? This process cannot be undone.</p>
+          </div>
+
+          <div class="modal-footer justify-content-center">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="assets/js/api_utility.js"></script>
   <script src="assets/js/tasks.js"></script>
-  <script src="assets/js/toast.js"></script>
   <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
   <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
 </body>
