--- a/src/main/webapp/admin_projects.html
+++ b/src/main/webapp/admin_projects.html
@@ -68,18 +68,44 @@
         </nav>
     </div>
 
-    <div class="container" style="margin-top: 60px">
+    <div class="container" style="margin-top: 70px">
         <h3>Projects</h3>
     </div>
     <div class="clearfix"></div>
     <br />
+
+    <div hidden id="members">
+        <div class="popover-heading">
+            <div class="float-start">Members on this project</div>
+            <div class="float-end">
+                <a href="#" class="close" data-dismiss="alert"><i class="fa fa-window-close" aria-hidden="true"></i></a>
+            </div><br>
+        </div>
+        <div class="popover-body">
+            <div class="form-group has-search mb-4">
+                <span class="fa fa-search form-control-search"></span>
+                <input type="text" class="form-control" onkeyup="myFunction(this)"  placeholder="Search">
+            </div>
+
+            <ul id="memberList">
+                <li class="member">Adele</li>
+                <li class="member">Agnes</li>
+                <li class="member">Billy</li>
+                <li class="member">Bob</li>
+                <li class="member">Calvin</li>
+                <li class="member">Christina</li>
+                <li class="member">Cindy</li>
+            </ul>
+        </div>
+    </div>
 
     <!-- Topic Cards -->
     <div id="cards_landscape_wrap-2">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a href="">
+                    <!-- <a href=""> -->
+                    <a id="popa" data-popover-content="#members" data-toggle="popover" data-trigger="focus">
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="text-container" style="margin:5px">
@@ -113,7 +139,8 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a href="">
+                    <a id="popBtn1" class="popover-dismiss" tabindex="0" role="button" data-bs-toggle="popover1"
+                        data-bs-trigger="focus hover" title="Members" data-bs-content="<ul><li>viswa</li></ul>">
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="text-container" style="margin:5px">
@@ -122,18 +149,20 @@
                                         </h4>
                                     </div>
                                     <div class="float-end ml-12">
-                                        
+
                                         <div class="dropdown">
-                                            <button class="btn-card"><i class="fa-solid fa-ellipsis-vertical"></i></button>
+                                            <button class="btn-card"><i
+                                                    class="fa-solid fa-ellipsis-vertical"></i></button>
                                             <div class="dropdown-content">
                                                 <button class="btn" style="width:100%">Edit</button>
                                                 <button class="btn" style="width:100%">Delete</button>
                                             </div>
                                         </div>
 
+
                                     </div>
                                     <div class="clearfix"></div>
-                                    <p class="mt-2 text-muted text-start">15 open tasks</p>
+                                    <p class="text-muted text-start">15 open tasks</p>
                                     <p class="desc">Lorem Ipsum is simply dummy text of the printing and typesetting
                                         industry.
                                         Lorem
@@ -231,7 +260,7 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <a href="">
+                    <a id="cardId" data-custom-value="1" style="cursor:pointer">
                         <div class="card-flyer">
                             <div class="text-box">
                                 <div class="text-container" style="margin:5px">
@@ -267,6 +296,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -276,11 +306,28 @@
     <script src="assets/js/projects.js"></script>
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('.dropdown-toggle').dropdown();
+    <script>
+        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl, { html: true, })
         });
-
+        $(document).ready(function () {
+            $("[data-toggle=popover]").popover({
+                html: true,
+                sanitize: false,
+                content: function () {
+                    var content = $(this).attr("data-popover-content");
+                    return $(content).children(".popover-body").html();
+                },
+                title: function () {
+                    var title = $(this).attr("data-popover-content");
+                    return $(title).children(".popover-heading").html();
+                }
+            });
+            $(document).on("click", ".popover .close", function () {
+                $(this).parents(".popover").popover('hide');
+            });
+        });
     </script>
 </body>
 
