--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="assets/js/jquery/jquery.min.js"></script>
-    <script src="assets/js/checkuser.js"></script>
+    <!-- <script src="assets/js/checkuser.js"></script> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -98,7 +98,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Add User</h5>
-                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
                 </div>
                 <form name="add-user" id="add-user">
                     <div class="modal-body">
@@ -151,7 +151,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Edit User</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="formModal" aria-label="Close"></button>
+                    <button type="button" class="btn btn-close" data-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <form id="edit-user" name="edit-user">
